--- a/top.html
+++ b/top.html
@@ -47,6 +47,7 @@
     </div>
     <div class= "feature">
       <div class= "feature-name">Feature</div>
+      <div cla
       <div class= "social">
         <i class="fas fa-terminal"></i>
         Contrary to popular belief, Lorem Ipsum is not simply random text.
